@@ -1,8 +1,12 @@
 \name{createExonWeightFile}
 \alias{createExonWeightFile}
 \title{Calculate exon weights}
-\description{Creates an exon weight file useful for segmentation, by 
-down-weighting unreliable exons.}
+\description{Creates an exon weight file useful for segmentation. Requires a
+set of GATK coverage files from normal samples. A small number of 
+tumor (or other normal) samples is then tested against all normals. Exon
+weights will be set proportional to the inverse of coverage standard
+deviation across all normals. Exons with high variance in coverage in the
+pool of normals are thus down-weighted.}
 \usage{createExonWeightFile(gatk.tumor.files, gatk.normal.files, 
     exon.weight.file)}
 \arguments{
