@@ -1,18 +1,19 @@
 \name{filterVcfBasic}
 \alias{filterVcfBasic}
 \title{Basic VCF filter function}
-\description{Function to remove artifacts and low confidence/quality variant calls }
+\description{Function to remove artifacts and low confidence/quality 
+variant calls.}
 \usage{filterVcfBasic(vcf, tumor.id.in.vcf = NULL, use.somatic.status = TRUE, 
     snp.blacklist = NULL, af.range = c(0.03, 0.97), 
     contamination.cutoff = c(0.05, 0.075), coverage.cutoff = 20, 
     min.supporting.reads = 3, verbose = TRUE)}
 \arguments{
-  \item{vcf}{VCF object, read in with the readVcf function from the 
-VariantAnnotation package.}
-  \item{tumor.id.in.vcf}{The tumor id in the VCF file, optional.}
+  \item{vcf}{CollapsedVCF object, read in with the readVcf function 
+from the VariantAnnotation package.}
+  \item{tumor.id.in.vcf}{The tumor id in the CollapsedVCF (optional).}
   \item{use.somatic.status}{If somatic status and germline data is available, then use this 
 information to remove non-heterozygous germline SNPs or germline SNPS 
-with biased allelic fractions.  }
+with biased allelic fractions.}
   \item{snp.blacklist}{CSV file with SNP ids with expected allelic fraction 
 significantly different from 0.5 in diploid genomes. Can be an array of 
 lists. The function createSNPBlacklist can provide appropriate black 
